src/firefox/browser/popup/tabpreview.scss
@use "shared/controls";
@use "shared++/utils";

#tab-note-text {
	// original
	min-height: 3lh;
}

.tab-preview-add-note {
	margin: 0;
}

.tab-preview-note-container {
	margin: 0;

	&::before {
		@include utils.pseudo-separator;
	}
}

#tab-preview-panel::part(content) {
	@include controls.tooltip;

	box-shadow: none;
}

.tab-preview-text-container {
	padding: 0;
}

.tab-preview-thumbnail-container {
	border: none;

	width: auto;
	height: auto;

	&:not(:empty)::before {
		@include utils.pseudo-separator;
	}

	& > canvas {
		// Distinguish the thumbnail from the tooltip bg a little bit
		border: 1px solid var(--color-gray-text);
	}
}

